{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 25,
  "lineage": "e5aa676d-10b7-b397-8cd7-87e4248dec3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037e4cea04c289af5",
            "arn": "arn:aws:ec2:us-east-1:444284889609:elastic-ip/eipalloc-037e4cea04c289af5",
            "association_id": "eipassoc-0ef533a8a4e3d1291",
            "domain": "vpc",
            "id": "eipalloc-037e4cea04c289af5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-079cb1fd71c3f6825",
            "private_dns": "ip-10-20-14-66.ec2.internal",
            "private_ip": "10.20.14.66",
            "public_dns": "ec2-18-209-217-248.compute-1.amazonaws.com",
            "public_ip": "18.209.217.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-nat",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-nat",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284889609:internet-gateway/igw-0b715c163ec7c5a4a",
            "id": "igw-0b715c163ec7c5a4a",
            "owner_id": "444284889609",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-igw",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-igw",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "vpc_id": "vpc-0c365f92e38e6849c"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037e4cea04c289af5",
            "connectivity_type": "public",
            "id": "nat-0ff03af2f5d7fa69c",
            "subnet_id": "subnet-0f09e425044bbdec1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-nat",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-nat",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284889609:route-table/rtb-0834b13c5a2bcbd8f",
            "id": "rtb-0834b13c5a2bcbd8f",
            "owner_id": "444284889609",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b715c163ec7c5a4a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-public-rt",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-public-rt",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c365f92e38e6849c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0379da65ceb30e911",
            "route_table_id": "rtb-0834b13c5a2bcbd8f",
            "subnet_id": "subnet-0f09e425044bbdec1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.primary",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0164fa2a613d97794",
            "route_table_id": "rtb-0834b13c5a2bcbd8f",
            "subnet_id": "subnet-0c88ebeb415985c7a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.primary",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284889609:subnet/subnet-0f95e2c039f09393f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f95e2c039f09393f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444284889609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-private-us-east-1a",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-private-us-east-1a",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c365f92e38e6849c"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284889609:subnet/subnet-0b5bc6e39510b9548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5bc6e39510b9548",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444284889609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-private-us-east-1b",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-private-us-east-1b",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c365f92e38e6849c"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284889609:subnet/subnet-0f09e425044bbdec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f09e425044bbdec1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444284889609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-public-us-east-1a",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-public-us-east-1a",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c365f92e38e6849c"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284889609:subnet/subnet-0c88ebeb415985c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c88ebeb415985c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444284889609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-public-us-east-1b",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-public-us-east-1b",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c365f92e38e6849c"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444284889609:vpc/vpc-0c365f92e38e6849c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-07be33accee2097c7",
            "default_route_table_id": "rtb-0a4cb28bd9842bd6c",
            "default_security_group_id": "sg-06136a18b24ba1edc",
            "dhcp_options_id": "dopt-00dfcf70a2b4b2040",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c365f92e38e6849c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4cb28bd9842bd6c",
            "owner_id": "444284889609",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-vpc",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "acquittify-foundation-vpc",
              "Project": "AcquittifyPeregrine",
              "Stack": "foundation"
            }
          }
        }
      ]
    }
  ]
}